welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value Monday
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
                 ^sleepIn:2: error: not found: value Tuesday
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
                           ^sleepIn:2: error: not found: value Wednesday
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
                                      ^sleepIn:2: error: not found: value Thursday
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
                                                   ^sleepIn:2: error: not found: value Friday
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
                                                               ^sleepIn:4: error: reassignment to val
    weekday = true
            ^sleepIn:8: error: reassignment to val
    weekday = false
            ^