welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if (weekday == Monday || Tuesday || Wednesday || Thursday || Friday)
  {
    weekday = true
  }
  else
  {
    weekday = false
  }
  if (vacation == true)
  {
    return true
  }
  if (weekday == false)
  {
    return true
  }
  else 
  {
    return false
  }
}